# hairball

./: .gitignore  BUILD  MODULE.bazel  README.md
buckets/: build.gradle  settings.gradle
buckets/gradle/wrapper/: gradle-wrapper.properties
buckets/src/main/java/com/giantelectronicbrain/catfood/buckets/: BucketDriverException.java  IBucket.java  IBucketDriver.java  IBucketDriverFactory.java  IBucketName.java  IBucketObject.java  IBucketObjectName.java  ObjectNotFoundException.java  package-info.java
buckets/src/test/java/com/giantelectronicbrain/catfood/buckets/: AsyncBucketDriverTest.java  BucketDriverTest.java  BucketObjectNameTest.java  BucketTest.java
core/: BUILD  build.gradle  gradlew
core/src/main/java/com/giantelectronicbrain/catfood/: IPlatform.java  core.gwt.xml
core/src/test/resources/: catfood.properties  custom.properties  eclipserun.properties
hairball/: .gitignore  build.gradle
hairball/src/main/documentation/: buildhtmldocs.sh  buildreadme.sh  documentation.hairball  hairball.css  hairball_builtins.hairball  introduction.hairball  readme.hairball
hairball/src/main/hairball/: gencontents.hairball
hairball/src/test/resources/: test_source.hairball
hairball_core/: BUILD  README.md  build.gradle  settings.gradle
hairball_core/src/main/documentation/: buildhtmldocs.sh  documentation.hairball  hairball.css  hairball_concepts.hairball  hairball_syntax.hairball
hairball_core/src/main/hairball/: html.hairball
hairball_core/src/main/resources/: logging.properties
hairball_core/src/test/resources/: test.hairball
(+97 files in other folders)
