module(
    name = "hairball",
    version = "1.0",
)

bazel_dep(name = "rules_jvm_external", version = "5.3")
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.slf4j:slf4j-api:1.7.30",
        "org.projectlombok:lombok:1.18.20",
        "io.vertx:vertx-core:4.0.3",
        "com.helger:ph-pdf-layout4:5.2.1",
        "com.fasterxml.jackson.core:jackson-annotations:2.16.0",
        "com.amazonaws:aws-java-sdk-bom:1.11.775",
        "com.amazonaws:aws-java-sdk-s3:1.11.775",
        "com.amazonaws:aws-java-sdk-core:1.11.775"
    ],
)
use_repo(maven, "maven")
# bazel_dep(name = "org.slf4j:slf4j-api", version = "1.7.30")
